# my-claude-rules

./: CLAUDE.md  README.md
create-malky-skill/: SKILL.md
malky-api-scaffolder/: SKILL.md  scaffold.py
malky-api-scaffolder/resources/: .env.example  .gitignore  Cargo.toml  README.md  api-Cargo.toml  justfile
malky-domain-designer/: SKILL.md
malky-domain-implementer/: SKILL.md
malky-infra-scaffolder/: SKILL.md  scaffold.py
malky-infra-scaffolder/resources/infra/: docker-compose.test.yml  docker-compose.yml
malky-outbox-pattern/: SKILL.md
malky-rust-scaffolder/: SKILL.md  scaffold.py
malky-rust-scaffolder/resources/: Cargo.toml
malky-rust-scaffolder/resources/migrations/: 20240101000001_create_items.sql
malky-rust-scaffolder/resources/src/: config.rs  error.rs  lib.rs  main.rs  router.rs
malky-rust-scaffolder/resources/src/features/example/: db.rs  handlers.rs  mod.rs  model.rs
malky-rust-scaffolder/resources/tests/: items.rs
malky-rust-scaffolder/resources/tests/common/: mod.rs
malky-skill-creator/: SKILL.md
