[package]
name = "__APP_NAME__"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "__APP_NAME__"
path = "src/main.rs"

[lib]
name = "__APP_NAME__"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum-test = "18"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
